
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-3 ($LastChangedRevision$, $LastChangedDate$)
====================================
- [#MODX-2062] Date TV type now can store time; updated datetime ExtJS xtype to latest version
- [#MODX-2046] Added 'collapse' toggle to left trees, shortened username on top right to allow for small resolutions
- [#MODX-2067] Fixed bug with cleanAlias and a non-existent lexicon string
- [#MODX-2086] Fixed a few bugs in package management styling
- Tweaks to context menu styling
- [#MODX-2078] Context menus now show under cursor
- [#MODX-2083] Fixed bug where setting editedon was returning invalid date
- [#MODX-2061] Fixed erroneous lexicon entry for cache_handler setting description
- [#MODX-2085] Fixed issue with namespace path not being translated on get
- Added ability to activate/deactivate FC rules from context menu
- fieldVisible, fieldLabel, tvVisible, tvMove Form Customization rules now support multiple fields via comma-sep list
- Added functionality to Form Customization to add new Tabs and move TVs to other tabs
- Applied CSS gradient styling to grids, tabs
- [#MODX-2056] Fixed CSS for topmenu, restyled to add contrast and enhanced
- Cleaned up TV display panel, removed TV reload button, extended fields all the way across
- [#MODX-1832] moved "Set to Default" to a fade-in icon
- Prepared code for oncoming feature to move TVs into other tabs
- Removed credits from about pane, consolidated tabs
- Fixed permissions checks on resource tree context menu when policies are limited
- Added prefix filtering to modLexicon::fetch
- Added modTemplateVar::getDisplayParams for easier fetching of display_params for a TV
- Fixed bug with custom TV render paths
- Added phpThumb to core, added connector for secure access, integrated into MODx.Browser