@@ -57,6 +57,12 @@ class modLexicon {
      * @access protected
      */
     protected $_paths = array();
+    /**
+     * An array of loaded topic strings
+     * 
+     * @var array $_loadedTopics
+     */
+    protected $_loadedTopics = array();
 
     /**
      * Creates the modLexicon instance.
@@ -149,10 +155,11 @@ class modLexicon {
     public function load() {
         $topics = func_get_args(); /* allow for dynamic number of lexicons to load */
 
-        foreach ($topics as $topic) {
-            if (!is_string($topic) || $topic == '') return false;
-            $nspos = strpos($topic,':');
-            $topic = str_replace('.','/',$topic); /** @deprecated 2.0.0 Allow for lexicon subdirs */
+        foreach ($topics as $topicStr) {
+            if (!is_string($topicStr) || $topicStr == '') continue;
+            if (in_array($topicStr,$this->_loadedTopics)) continue;
+            $nspos = strpos($topicStr,':');
+            $topic = str_replace('.','/',$topicStr); /** @deprecated 2.0.0 Allow for lexicon subdirs */
 
             /* if no namespace, search all lexicons */
             if ($nspos === false) {
@@ -176,6 +183,7 @@ class modLexicon {
 
                 $entries = $this->loadCache($namespace,$topic_parsed,$language);
                 if (is_array($entries)) {
+                    $this->_loadedTopics[] = $topicStr;
                     $this->_lexicon = is_array($this->_lexicon) ? array_merge($this->_lexicon, $entries) : $entries;
                 }
             }
