@@ -25,9 +25,10 @@ if (!is_array($properties)) $properties = array();
 /* process data */
 $data = array();
 foreach ($properties as $property) {
+    if (!empty($property['lexicon'])) $modx->lexicon->load($property['lexicon']);
     $data[] = array(
         $property['name'],
-        $property['desc'],
+        $modx->lexicon($property['desc']),
         $property['type'],
         $property['options'],
         $property['value'],
