@@ -24,6 +24,8 @@ $o = '';
 $props = array();
 foreach ($properties as $k => $property) {
     $xtype = 'textfield';
+    if (is_array($property) && !empty($property['lexicon'])) $modx->lexicon->load($property['lexicon']);
+    $desc = $modx->lexicon($property['desc']);
 
     if (is_array($property)) {
         $v = $property['value'];
@@ -44,7 +46,7 @@ foreach ($properties as $k => $property) {
             $props[] = array(
                 'xtype' => 'combo',
                 'fieldLabel' => $k,
-                'description' => $property['desc'],
+                'description' => $desc,
                 'name' => $k,
                 'value' => $v,
                 'id' => 'modx-iprop-'.$k,
@@ -66,7 +68,7 @@ foreach ($properties as $k => $property) {
             $props[] = array(
                 'xtype' => 'modx-combo-boolean',
                 'fieldLabel' => $k,
-                'description' => $property['desc'],
+                'description' => $desc,
                 'name' => $k,
                 'value' => $v,
                 'id' => 'modx-iprop-'.$k,
@@ -78,7 +80,7 @@ foreach ($properties as $k => $property) {
             $props[] = array(
                 'xtype' => 'datefield',
                 'fieldLabel' => $k,
-                'description' => $property['desc'],
+                'description' => $desc,
                 'name' => $k,
                 'value' => $v,
                 'width' => 175,
@@ -90,7 +92,7 @@ foreach ($properties as $k => $property) {
             $props[] = array(
                 'xtype' => 'textarea',
                 'fieldLabel' => $k,
-                'description' => $property['desc'],
+                'description' => $desc,
                 'name' => $k,
                 'value' => $v,
                 'width' => 300,
@@ -103,7 +105,7 @@ foreach ($properties as $k => $property) {
             $props[] = array(
                 'xtype' => 'textfield',
                 'fieldLabel' => $k,
-                'description' => $property['desc'],
+                'description' => $desc,
                 'name' => $k,
                 'value' => $v,
                 'width' => 300,
