@@ -49,9 +49,10 @@ $data = array();
 /* put in default properties for element */
 if (isset($default)) {
     foreach ($default as $property) {
+        if (!empty($property['lexicon'])) $modx->lexicon->load($property['lexicon']);
         $data[$property['name']] = array(
             $property['name'],
-            $property['desc'],
+            $modx->lexicon($property['desc']),
             $property['type'],
             $property['options'],
             $property['value'],
@@ -72,9 +73,10 @@ foreach ($properties as $property) {
         $overridden = 2;
     }
 
+    if (!empty($property['lexicon'])) $modx->lexicon->load($property['lexicon']);
     $data[$property['name']] = array(
         $property['name'],
-        $property['desc'],
+        $modx->lexicon($property['desc']),
         $property['type'],
         $property['options'],
         $property['value'],
